Use pid instead of bibliographicrecordid
Auditors: akri, mib, jbr, hwha
