# src/main/java/dk/dbc/setddfcover/CoverResource.java
@@ -1,6 +1,5 @@
 package dk.dbc.setddfcover;
 
-import dk.dbc.rawrepo.record.RecordServiceConnector;
 import dk.dbc.setddfcover.model.ServiceError;
 import dk.dbc.setddfcover.model.UpdateEvent;
 import org.slf4j.Logger;
@@ -17,18 +16,15 @@ import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 @Stateless
 @Path("api")
 public class CoverResource {
-
     private static final Logger LOGGER = LoggerFactory.getLogger(CoverResource.class);
-
-    @Inject
-    RecordServiceConnector recordServiceConnector;
+    private static final Pattern PID_PATTERN = Pattern.compile("(\\d{6})[-](.*)[:](.*)");
 
     @Inject
     @SetDDFCoverEntityManager
@@ -46,59 +42,52 @@ public class CoverResource {
         try {
             LOGGER.debug("Received request: {}", updateEvent);
 
-            if (updateEvent.getBibliographicRecordId() == null) {
+            if (updateEvent.getPid() == null) {
                 final ServiceError serviceError = new ServiceError();
-                serviceError.setCause("Invalid request");
+                serviceError.setCause("Invalid request - missing pid value");
 
                 return Response.status(Response.Status.BAD_REQUEST).entity(serviceError).build();
             }
 
-            final String bibliographicRecordId = updateEvent.getBibliographicRecordId();
+            final String pid = updateEvent.getPid();
+            final boolean coverExists = updateEvent.isCoverExists();
+
+            final Matcher matcher = PID_PATTERN.matcher(pid);
+
+            if (!matcher.find()) {
+                final ServiceError serviceError = new ServiceError();
+                serviceError.setCause("Invalid request - wrong pid format");
+
+                return Response.status(Response.Status.BAD_REQUEST).entity(serviceError).build();
+            }
+
+            final String bibliographicRecordId =  matcher.group(3);
+            final String agencyId = matcher.group(1);
 
             final TypedQuery<CoverEntity> query =
-                    entityManager.createNamedQuery(CoverEntity.SELECT_FROM_COVER_BY_BIBLIOGRAPHICRECORDID_NAME, CoverEntity.class);
-            query.setParameter("bibliographicRecordId", bibliographicRecordId);
+                    entityManager.createNamedQuery(CoverEntity.SELECT_FROM_COVER_BY_PID_NAME, CoverEntity.class);
+            query.setParameter("pid", pid);
 
             // getSingleResult could be used here, however that function throws exception if nothing is found
             final List<CoverEntity> coverEntities = query.getResultList();
             if (coverEntities.isEmpty()) {
-                // New cover
-                final Integer[] agenciesForRecordArray = recordServiceConnector.getAllAgenciesForBibliographicRecordId(bibliographicRecordId);
-                final List<Integer> agenciesForRecordList = Arrays.stream(agenciesForRecordArray).collect(Collectors.toList());
+                final CoverEntity coverEntity = new CoverEntity();
+                coverEntity.setPid(pid);
+                coverEntity.setCoverExists(coverExists);
 
-                if (agenciesForRecordList.isEmpty()) {
-                    // We don't have a record with the given faust. Return status code 404.
-                    final String message = String.format("No record found with bibliographicRecordId %s", bibliographicRecordId);
-                    LOGGER.error(message);
+                entityManager.persist(coverEntity);
 
-                    final ServiceError serviceError = new ServiceError();
-                    serviceError.setCause(message);
-
-                    return Response.status(Response.Status.NOT_FOUND).entity(serviceError).build();
-                }
-
-                // If there is a 870970 record then the cover must be associated with that record
-                if (agenciesForRecordList.contains(870970)) {
-                    final String agencyId = "870970";
-                    addCover(bibliographicRecordId, updateEvent.isCoverExists(), agencyId);
+                if (coverExists) {
                     solrDocStoreDAO.setHasDDFCover(bibliographicRecordId, agencyId);
-                } else {
-                    // If no 870970 record then set cover on all agencies which has that record
-                    for (Integer agencyId : agenciesForRecordList) {
-                        final String agencyIdAsString = Integer.toString(agencyId);
-                        addCover(bibliographicRecordId, updateEvent.isCoverExists(), agencyIdAsString);
-                        solrDocStoreDAO.setHasDDFCover(bibliographicRecordId, agencyIdAsString);
-                    }
                 }
             } else {
-                for (CoverEntity coverEntity : coverEntities) {
-                    coverEntity.setCoverExists(updateEvent.isCoverExists());
+                final CoverEntity coverEntity = coverEntities.get(0);
+                coverEntity.setCoverExists(updateEvent.isCoverExists());
 
-                    if (updateEvent.isCoverExists()) {
-                        solrDocStoreDAO.setHasDDFCover(coverEntity.getBibliographicRecordId(), coverEntity.getAgencyId());
-                    } else {
-                        solrDocStoreDAO.removeHasDDFCover(coverEntity.getBibliographicRecordId(), coverEntity.getAgencyId());
-                    }
+                if (updateEvent.isCoverExists()) {
+                    solrDocStoreDAO.setHasDDFCover(bibliographicRecordId, agencyId);
+                } else {
+                    solrDocStoreDAO.removeHasDDFCover(bibliographicRecordId, agencyId);
                 }
             }
 
@@ -116,15 +105,6 @@ public class CoverResource {
 
             return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(serviceError).build();
         }
-    }
-
-    private void addCover(String bibliographicRecordId, boolean coverExists, String agencyId) {
-        final CoverEntity coverEntity = new CoverEntity();
-        coverEntity.setBibliographicRecordId(bibliographicRecordId);
-        coverEntity.setCoverExists(coverExists);
-        coverEntity.setAgencyId(agencyId);
-
-        entityManager.persist(coverEntity);
     }
 
 }
